# lindenmayer-system-roots

./: .gitignore  GA.py  LSystem.py  README.md  ga_instance1.pkl  ga_instance2.pkl  ga_instance3.pkl  ga_instance_adv.pkl  main.py  plant.eps  pyproject.toml  systemDrawer.py  tree.eps
